<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        app:showAsAction="always"
        android:id="@+id/item_Home"
        android:icon="@drawable/ic_bottommenu_home_check"
        android:title="@string/Home_BottomeMenu"
        />

    <item
        app:showAsAction="always"
        android:id="@+id/item_money"
        android:icon="@drawable/ic_bottommenu_money_check"
        android:title="@string/Money_BottomeMenu"
        />

    <item
        app:showAsAction="always"
        android:id="@+id/item_report"
        android:icon="@drawable/ic_bottommenu_report_check"
        android:title="@string/Report_BottomeMenu"
        />

    <item
        app:showAsAction="always"
        android:id="@+id/item_logout"
        android:icon="@drawable/ic_bottommenu_logout_check"
        android:title="@string/Logout_BottomeMenu"
        />
</menu>