<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screen.deal.FragmentCustomerReturn">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_khachTraHang"
        android:textColor="@color/red1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_tb_recycleview"
        android:gravity="center"
        android:text="@string/customer"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="74dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_tb_recycleview"
        android:gravity="center"
        android:text="@string/txt_ngayTra"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="74dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_tb_recycleview"
        android:gravity="center"
        android:text="@string/txt_tongTien"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="274dp"
        tools:layout_editor_absoluteY="74dp"
        tools:ignore="MissingConstraints" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleViewCustomerReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:itemCount="10"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/item_customer_return">

    </android.support.v7.widget.RecyclerView>
</android.support.constraint.ConstraintLayout>