<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spn_LoaiDoanhSo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:spinnerMode="dropdown">

    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPayMoney"
        android:gravity="left|center"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/txtTienBan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="200000000000000"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saleMoneyText"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorSale"
        android:gravity="left|center"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/txtDonHang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="200000000000000"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orderText"
            android:textColor="@color/white"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorReturns"
        android:gravity="left|center"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/txtTraHang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="200000000000000"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/returnsText"
            android:textColor="@color/white"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorDebt"
        android:gravity="left|center"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/txtCongNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="200000000000000"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debtText"
            android:textColor="@color/white"

            />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <FrameLayout
            android:id="@+id/viewPageReport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></FrameLayout>
    </ScrollView>

</LinearLayout>