<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="UserDoRegister"
            type="com.ssk.retailshop.screen.register.model.UserRegisterDTO" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_screen"
        tools:context=".screen.register.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/registerstore"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_border_loginform"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_eMail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.85"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:text="@={UserDoRegister.mailName}" />
            </LinearLayout>

            <!-- Email Label -->

            <!--<EditText-->
            <!--android:id="@+id/input_eMail"-->
            <!--android:drawableLeft="@drawable/ic_email_red_24dp"-->
            <!--android:drawablePadding="10dip"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:backgroundTint="@color/white"-->
            <!--android:hint="@string/mail"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:singleLine="false"-->
            <!--android:text="@={UserDoRegister.mailName}" -->
            <!--android:background=""/>-->


            <!-- Password Label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_border_loginform"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.85"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:text="@={UserDoRegister.passWord}" />
            </LinearLayout>

            <!--  Name Label -->
            <EditText
                android:id="@+id/input_tenCuaHang"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_border_loginform"
                android:backgroundTint="@color/white"
                android:hint="@string/namestore"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:text="@={UserDoRegister.storeName}" />


            <!--Confirm Phone Label -->
            <EditText
                android:id="@+id/input_soDienThoai"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_border_loginform"
                android:backgroundTint="@color/white"
                android:hint="@string/sdt"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:text="@={UserDoRegister.phoneNumber}" />

            <!--Confirm Address Label -->

            <EditText
                android:id="@+id/input_diaChi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_border_loginform"
                android:backgroundTint="@color/white"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:paddingLeft="10dp"
                android:text="@={UserDoRegister.address}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <!--SignUp Button-->
                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/border_register_btn"
                    android:onClick="onClickRegister"
                    android:text="@string/registerbutton"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="40dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickLinkLogin"
                android:text="Đã có tài khoản?"
                android:textColor="@color/white"
                android:visibility="visible" />

            <TextView
                android:id="@+id/link_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:onClick="onClickLinkLogin"
                android:text="Đăng nhập"
                android:textColor="@color/navi"
                android:visibility="visible" />
        </LinearLayout>

    </RelativeLayout>

</layout>