<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/iron"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_tb_recycleview"
                    android:gravity="center"
                    android:text="@string/orderText"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_tb_recycleview"
                    android:gravity="center"
                    android:text="@string/dateCreate"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_tb_recycleview"
                    android:gravity="center"
                    android:text="@string/sales"
                    android:textColor="@color/white" />


            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleViewReportToTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="3"
                tools:listitem="@layout/item_report_to_time">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    <!--</ScrollView>-->


    <!--<Button-->
        <!--android:id="@+id/btnSave"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="24dp"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:background="@color/colorReturns"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/btn_save"-->
        <!--android:textColor="@color/white"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent" />-->



</android.support.constraint.ConstraintLayout>