<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/iron"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_tb_recycleview"
                android:gravity="center"
                android:text="@string/txt_nameProduct"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_tb_recycleview"
                android:gravity="center"
                android:text="@string/txt_numberProduct"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_tb_recycleview"
                android:gravity="center"
                android:text="@string/txt_sales"
                android:textColor="@color/white" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleViewReportToProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_report_to_product">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <!--<Button-->
    <!--android:id="@+id/btnSave"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:layout_marginEnd="32dp"-->
    <!--android:layout_marginBottom="16dp"-->
    <!--android:background="@color/colorReturns"-->
    <!--android:text="@string/btn_save"-->
    <!--android:textColor="@color/white"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/scrollView5" />-->

    <!--<android.support.constraint.Guideline-->
    <!--android:id="@+id/guideline"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--app:layout_constraintGuide_end="376dp" />-->

</android.support.constraint.ConstraintLayout>